--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 body {
-
-    /*background: linear-gradient(90deg, #12C2E9 0%, #C471ED 50%, #F64F59 100%);
-    background: linear-gradient(90deg, #BC4E9C 0%, #F80759 100%);*/
-    /*background: linear-gradient(90deg, #FF5F6D 0%, #FFC371 100%);
-    /*background: linear-gradient(90deg, #EF32D9 0%, #89FFFD 100%);
+  /*background: linear-gradient(90deg, #12C2E9 0%, #C471ED 50%, #F64F59 100%);
+    background: linear-gradient(90deg, #BC4E9C 0%, #F80759 100%);
+    background: linear-gradient(90deg, #FF5F6D 0%, #FFC371 100%);
+    background: linear-gradient(90deg, #EF32D9 0%, #89FFFD 100%);
     background: linear-gradient(90deg, #AA4B6B 0%, #6B6B83 50%, #3B8D99 100%);
     background: linear-gradient(90deg, #FC5C7D 0%, #6A82FB 100%);
     background: linear-gradient(90deg, #EF629F 0%, #EECDA3 100%);
@@ -18,9 +17,7 @@ body {
     background: linear-gradient(90deg, #12FFF7 0%, #B3FFAB 100%);
 }
 .App {
-  
   text-align: center;
-  
 }
 
 .button4{
@@ -41,24 +38,6 @@ body {
 .button4:hover{
     border-color: rgba(255,255,255,1);
 }
-@media all and (max-width:30em){
-   .button4{
-      display:block;
-      margin:0.2em auto;
-    }
-  }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -69,16 +48,23 @@ body {
   font-size: calc(10px + 2vmin);
   color: white;
 }
+.filter-container {
 
-.App-link {
-  color: #61dafb;
+  background-color: blueviolet;
+ }
+/* clear fix */
+.filter-container :after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+ 
+
+@media all and (max-width:30em){
+   .button4{
+      display:block;
+      margin:0.2em auto;
+    }
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
